# Renn

./: .clang-format  .clangd  CMakeLists.txt
.cache/clangd/index/: ApplicationNode.cc.0407587779A1E85D.idx  ApplicationNode.hpp.8109CBE05321693E.idx  AsyncExec.cc.9E137CC0397AC31A.idx  BaseNode.hpp.E16C281448364B9E.idx  Expr.cc.0DF3A6912F47466B.idx  Expr.hpp.EE6CB98F4BF7D334.idx  Expressions.hpp.1C93AEEB73455B77.idx  Optimize.cc.F4DC53032AC5B4F5.idx  Properties.hpp.079B415D5278F4D2.idx  SyncExec.cc.38C18765B86A087A.idx  ValueNode.cc.637716840B85D579.idx  ValueNode.hpp.3F63ADB8CE4179CF.idx  main.cc.9F0B72DAC7BFAA0A.idx  stress_tests.cc.6235525EDC9907B9.idx  unit_tests.cc.3D7250F5421957D8.idx  visitor.cc.856B53D242FC6BCB.idx  visitor.hpp.238DA02B695648B8.idx
include/Ast/: visitor.hpp
include/Ast/Nodes/: ApplicationNode.hpp  BaseNode.hpp  ThenNode.hpp  ValueNode.hpp
include/Core/: Common.hpp  Concepts.hpp  Details.hpp  Event.hpp  Expr.hpp  Future.hpp  Future_inl.hpp  Promise.hpp  SharedState.hpp  StateMachine.hpp
include/Core/Concepts/: Containers.hpp  Expressions.hpp  Properties.hpp
include/Core/Nodes/: BaseNode.hpp  FlatMapNode.hpp  MapNode.hpp  ValueNode.hpp
include/Execution/: Context.hpp  Executor.hpp  Optimize.hpp  Scheduler.hpp  Visualizer.hpp
include/Execution/Executors/: executor.hpp
include/Runtime/: Executor.hpp  Future.hpp
src/: main.cc
src/Ast/Nodes/: ApplicationNode.cc  ValueNode.cc
src/Core/: Expr.cc
src/Runtime/: Visualizer.cc
tests/: CMakeLists.txt
